fixes color issue on dark mode for batch and resource modals

--- a/styles/campaign.module.css
+++ b/styles/campaign.module.css
@@ -19,6 +19,7 @@
   color: #fff; */
   padding: 1rem 0;
   text-align: center;
+  color: #43436B;
 }
 
 .titleContainer{
