--- a/styles/operations.module.css
+++ b/styles/operations.module.css
@@ -70,8 +70,9 @@
 
 .title{
   font-weight: 500;
-    font-size: 1.25rem;
-    line-height: 1.6;
+  font-size: 1.25rem;
+  line-height: 1.6;
+  color: #43436B;
 }
 
 .pl8{
